--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "mongodb": "^4.4.1",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
   }
