--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "batnav-server",
   "version": "2022.404.0",
-  "description": "Servidor para el juego de batnav (https.//github.com/gerardowacker/batnav)",
+  "description": "BatNav game server. Handles API and real-time connections. (https.//github.com/gerardowacker/batnav)",
   "main": "src/index.js",
   "scripts": {
     "start": "node .",
