Modified `config.json` so it would include the match collection

--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
     "address": "cluster.url",
     "password": "password",
     "database": "database",
-    "users": "users_collection"
+    "users": "users_collection",
+    "matches": "matches_collection"
   }
 }
